# python-setup-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
tests/: test_core.py
